[package]
name = "libmudtelnet"
description = "low-level Telnet protocol implementation for MUD clients"
version = "2.0.1"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/cpu/libmudtelnet"
repository = "https://github.com/cpu/libmudtelnet"
documentation = "https://docs.rs/libmudtelnet"
license = "MIT"
keywords = ["telnet", "libtelnet", "mud"]
categories = ["network-programming"]
exclude = ["docs/**", ".github/**"]

[dependencies]
bytes = "1.1.0"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
compat = { path = "compat", features = ["arbitrary"] }

[features]
default = ["std"]
std = []

[patch.crates-io]
libtelnet-rs = { git = "https://github.com/cpu/libtelnet-rs", branch = "cpu-libmudtelnet-compat" }
