[package]
name = "compat"
description = "helpers for testing compatibility with libtelnet-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
libtelnet-rs = "2.0.0"
libmudtelnet = { path = "..", features = ["arbitrary"] }
bencher = "0.1.5"
rand = "0.8.5"

[[bench]]
name = "benchmarks"
path = "benches/benchmark.rs"
harness = false
